Removed not needed methods
